Wed Jan  5 17:00:02 2022  Rob Lauer  <rlauer6@comcast.net>

	[docker]:
	* docker-up: removed
	* docker/data-sources.xml.in: new
	* docker/docker-compose.yml: new
	* docker/mysql-session.xml.in: new

Wed Jan  5 16:47:58 2022  Rob Lauer  <rlauer6@comcast.net>

	[handler cleanup]:
	* src/main/perl/lib/Bedrock/Handler.pm.in
	(read_config): new
	(_log): refactored
	(_list_xml_files): new
	(get_bedrock_config): refactored
	* src/main/perl/lib/Bedrock/BedrockConfig.pm.in
	(merge_config): refactored
	(get_module_config): return entire array if no module name
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm.in
	(handler)
	- better error reporting around determining log directory
	- cleanup of session, header binding to use bind_module()

	[docker]:
	* docker/perl_bedrock.conf: fix LogFormat

Wed Jan  5 08:06:57 2022  Rob Lauer  <rlauer6@comcast.net>

	[docker]:
	* configure.ac: docker/Makefile
	* docker-up: moved to /docker
	* docker/Dockerfile.in: new
	* docker/Makefile.am: new
	* docker/bedrock.repo: new
	* docker/perl_aws.repo: new
	* docker/perl_bedrock.conf: new
	* docker/mysql-session.xml: new
	* docker/data-sources.xml: new
	* docker/README.md: new

	[include]:
	* src/main/perl/lib/Bedrock/Apache/Bedrock.pm.in: bind_error
	* src/main/perl/lib/Bedrock/Text/TagX/TAG/NoBody/Include.pm.in
	- refactored
	- more logging
	- security warnings
	* src/main/perl/lib/Test/Bedrock.pm.in
	- default op for error = like
	* src/main/perl/t/include.yml: more tests

Mon Jan  3 17:49:25 2022  Rob Lauer  <rlauer6@comcast.net>

	[test logging]:
	* src/main/perl/README.md: wip
	* src/main/perl/test-tag.pl: local to local bedrock-test.log
	* src/main/perl/lib/Bedrock/Context.pm.in
	- typos when setting request/response which are currently not used
	* src/main/perl/lib/Bedrock/Log.pm.in
	- removed MAILLEVEL?
	- set max logsize to 200MB
	* src/main/perl/lib/Bedrock/Text/TagX.pm.in
	(options): prevent .log.log
	* src/main/perl/lib/Bedrock/Text/TagX/Log.pm.in
	- allow /dev/stderr