@@ -31,23 +31,23 @@ sub startSession {
 
   $self->{'sql'} = $sql;
   $self->SUPER::startSession($config);
-}
+} ## end sub startSession
 
 sub do_sql {
   my $self    = shift;
   my $what    = shift;
   my %options = @_;
 
-  my $sql  = $self->{'sql'}->{$what}->{sql};
-  return 0 unless $sql;
+  my $sql = $self->{'sql'}->{$what}->{sql};
+  return 0 if !$sql;
 
   my @args = @options{ @{ $self->{'sql'}->{$what}->{args} } };
 
-  &log_message(undef, "do_sql: $sql bindvars: " . join(",", @args))
+  &log_message( undef, "do_sql: $sql bindvars: " . join( ",", @args ) )
     if $self->{verbose};
 
   $self->_do_sql( $sql, @args );
-}
+} ## end sub do_sql
 
 sub do_select_set {
   my $self    = shift;
@@ -59,7 +59,7 @@ sub do_select_set {
   my @args = @options{ @{ $self->{'sql'}->{$what}->{args} } };
 
   $self->_do_select_set( $sql, @args );
-}
+} ## end sub do_select_set
 
 sub do_select {
   my $self    = shift;
@@ -71,7 +71,7 @@ sub do_select {
   my @args = @options{ @{ $self->{'sql'}->{$what}->{args} } };
 
   $self->_do_select( $sql, @args );
-}
+} ## end sub do_select
 
 sub _do_sql {
   my $self = shift;
@@ -80,25 +80,26 @@ sub _do_sql {
   my $dbh = $self->{'dbh'};
 
   my $sth = $dbh->prepare($stm);
-  die "Unable to prepare SQL statement: $stm\n", $dbh->errstr, "\n" unless $sth;
+  die "Unable to prepare SQL statement: $stm\n", $dbh->errstr, "\n"
+    if !$sth;
 
-  for ( my $i = 1 ; $i <= @_ ; $i++ ) {
+  for ( my $i = 1; $i <= @_; $i++ ) {
     $sth->bind_param( $i, $_[ $i - 1 ] )
-    || die "Could not bind parameter $i ($_[$i-1]): ", $sth->errstr, "\n";
+      || die "Could not bind parameter $i ($_[$i-1]): ", $sth->errstr, "\n";
   }
 
   my $rows = $sth->execute;
   die "Error executing SQL statement: $stm\n", $sth->errstr, "\n"
-  unless defined $rows;
+    if !defined $rows;
   $rows;
-}
+} ## end sub _do_sql
 
 sub db_handle {
   my $obj  = shift;
   my $self = tied( %{$obj} );
 
   $self->{'dbh'};
-}
+} ## end sub db_handle
 
 sub _do_select {
   my $self = shift;
@@ -107,7 +108,7 @@ sub _do_select {
   my $nrows = scalar(@$rows);
   die "Query found more than 1 row (found $nrows rows).\n" if $nrows > 1;
   return $rows->[0];
-}
+} ## end sub _do_select
 
 sub _do_select_set {
   my $self = shift;
@@ -115,19 +116,19 @@ sub _do_select_set {
   my $dbh  = $self->{'dbh'};
 
   my $sth = $dbh->prepare($stm);
-  die "Unable to prepare SQL query: $stm\n", $dbh->errstr, "\n" unless $sth;
+  die "Unable to prepare SQL query: $stm\n", $dbh->errstr, "\n" if !$sth;
 
   &log_message( undef, "statement: $stm\n" )
-  if $self->{verbose};
+    if $self->{verbose};
 
-  for ( my $i = 1 ; $i <= @_ ; $i++ ) {
+  for ( my $i = 1; $i <= @_; $i++ ) {
     $sth->bind_param( $i, $_[ $i - 1 ] )
-    || die "Could not bind parameter $i ($_[$i-1]): ", $sth->errstr, "\n";
+      || die "Could not bind parameter $i ($_[$i-1]): ", $sth->errstr, "\n";
   }
 
   my $success = $sth->execute;
   die "Error executing SQL statement: $stm\n", $sth->errstr, "\n"
-  unless defined $success;
+    if !defined $success;
 
   my @rows;
 
@@ -136,10 +137,10 @@ sub _do_select_set {
   }
 
   die "Error extracting data from SQL query: ", $sth->errstr, "\n"
-  if $sth->err;
+    if $sth->err;
 
   return \@rows;
-}
+} ## end sub _do_select_set
 
 # +---------------------------------------------------------------+
 # | ->CONNECT( %options )                                         |
@@ -157,17 +158,17 @@ sub CONNECT {
 
   # Get the required database params
   die ref($self),
-  "->CONNECT(): param `data_source' must be specified in config\n"
-  unless $options{config}->{data_source};
+    "->CONNECT(): param `data_source' must be specified in config\n"
+    if !$options{config}->{data_source};
 
-  $self->{dbh} =
-  DBI->connect( @{ $options{config} }{qw(data_source username password)} );
+  $self->{dbh} = DBI->connect(
+    @{ $options{config} }{qw(data_source username password)} );
 
   die "Could not connect to database `"
-  . $options{config}->{data_source}
-  . "': ", $DBI::errstr, "\n"
-  unless $self->{dbh};
-}
+    . $options{config}->{data_source}
+    . "': ", $DBI::errstr, "\n"
+    if !$self->{dbh};
+} ## end sub CONNECT
 
 # +---------------------------------------------------------------+
 # | ->DISCONNECT( %options )                                      |
@@ -200,7 +201,7 @@ sub FETCH_LOGIN_SESSION {
   my %options = @_;
 
   return $self->do_select( 'FETCH_LOGIN_SESSION', %options );
-}
+} ## end sub FETCH_LOGIN_SESSION
 
 # +---------------------------------------------------------------+
 # | ->FETCH_LOGIN_SESSION_BY_USERNAME( %options )                 |
@@ -217,7 +218,7 @@ sub FETCH_LOGIN_SESSION_BY_USERNAME {
   my %options = @_;
 
   return $self->do_select( 'FETCH_LOGIN_SESSION_BY_USERNAME', %options );
-}
+} ## end sub FETCH_LOGIN_SESSION_BY_USERNAME
 
 # +---------------------------------------------------------------+
 # | ->KILL_SESSION( %options )                                    |
@@ -233,7 +234,7 @@ sub KILL_SESSION {
   my %options = @_;
 
   return $self->do_sql( 'KILL_SESSION', %options );
-}
+} ## end sub KILL_SESSION
 
 # +---------------------------------------------------------------+
 # | ->STORE_LOGIN_SESSION( %options )                             |
@@ -260,7 +261,7 @@ sub STORE_LOGIN_SESSION {
   my $self    = shift;
   my %options = @_;
 
-  $options{expires} = 0 unless exists $options{expires};
+  $options{expires} = 0 if !exists $options{expires};
 
   if ( $options{username} ) {
     $self->do_sql( 'STORE_LOGIN_SESSION_BY_USERNAME', %options );
@@ -268,7 +269,7 @@ sub STORE_LOGIN_SESSION {
   else {
     $self->do_sql( 'STORE_LOGIN_SESSION_BY_LOGIN_ID', %options );
   }
-}
+} ## end sub STORE_LOGIN_SESSION
 
 # +---------------------------------------------------------------+
 # | ->UPDATE_LOGIN_SESSION( %options )                            |
@@ -290,10 +291,10 @@ sub UPDATE_LOGIN_SESSION {
 
   my $rows = $self->do_sql( 'UPDATE_LOGIN_SESSION', %options );
   die "Could not update settings for user `" . $options{username} . "'\n"
-    unless $rows == 1;
+    if !$rows == 1;
 
   $rows;
-}
+} ## end sub UPDATE_LOGIN_SESSION
 
 # +---------------------------------------------------------------+
 # | ->FETCH_SESSION( %options )                                   |
@@ -310,10 +311,10 @@ sub FETCH_SESSION {
   my %options = @_;
 
   &log_message( undef, "fetching session\n" )
-  if $self->{verbose};
+    if $self->{verbose};
 
   $self->do_select( 'FETCH_SESSION', %options );
-}
+} ## end sub FETCH_SESSION
 
 # +---------------------------------------------------------------+
 # | ->SESSION_CLEANUP( %options )                                 |
@@ -341,22 +342,22 @@ sub SESSION_CLEANUP {
     if ( -d "$session_dir" ) {
       my $session_ids = $self->FETCH_EXPIRED_SESSIONS(%options);
 
-      foreach my $session (@{$session_ids}) {
+      foreach my $session ( @{$session_ids} ) {
         my $id = $session->[0];
-	next unless $id;
+        next if !$id;
 
         &log_message( undef, "Removing $session_dir/$id" )
-	  if $self->{verbose};
-	
+          if $self->{verbose};
+
         rmtree("$session_dir/$id")
-	  if -d "$session_dir/$id";
-      }
-    }
-  }
+          if -d "$session_dir/$id";
+      } ## end foreach my $session ( @{$session_ids...})
+    } ## end if ( -d "$session_dir")
+  } ## end if ( $self->cleanup_session_dir)
 
   # remove data from login sessions
-  if ( exists $options{config}->{cleanup_login_sessions} 
-       && $options{config}->{cleanup_login_sessions} =~/y/i ) {
+  if ( exists $options{config}->{cleanup_login_sessions}
+    && $options{config}->{cleanup_login_sessions} =~ /y/i ) {
     $self->do_sql( 'LOGIN_SESSION_SANITIZE', %options );
   }
   else {
@@ -364,7 +365,7 @@ sub SESSION_CLEANUP {
   }
 
   $self->do_sql( 'SESSION_CLEANUP', %options );
-}
+} ## end sub SESSION_CLEANUP
 
 # +---------------------------------------------------------------+
 # | ->FETCH_EXPIRED_SESSIONS( %options )                          |
@@ -380,7 +381,7 @@ sub FETCH_EXPIRED_SESSIONS {
   my %options = @_;
 
   $self->do_select_set( 'FETCH_EXPIRED_SESSIONS', %options );
-}
+} ## end sub FETCH_EXPIRED_SESSIONS
 
 # +---------------------------------------------------------------+
 # | ->STORE_SESSION( %options )                                   |
@@ -401,10 +402,10 @@ sub STORE_SESSION {
   my $self    = shift;
   my %options = @_;
 
-  $options{expires} =
-     $options{expires}
-  || $options{config}->{'cookie'}->{'expiry_secs'}
-  || 86400;
+  $options{expires}
+    = $options{expires}
+    || $options{config}->{'cookie'}->{'expiry_secs'}
+    || 86400;
   $options{prefs}     = $options{prefs}     || $options{data}->{prefs};
   $options{firstname} = $options{firstname} || $options{data}->{firstname};
   $options{lastname}  = $options{lastname}  || $options{data}->{lastname};
@@ -413,31 +414,31 @@ sub STORE_SESSION {
   if ( $options{new} ) {
     my $rows = $self->do_sql( 'STORE_SESSION_INSERT', %options );
     &log_message( undef,
-               "Inserting session [" . $options{session} . "]: rows = [$rows]" )
-    if $options{verbose};
+      "Inserting session [" . $options{session} . "]: rows = [$rows]" )
+      if $options{verbose};
 
     if ( $options{'expires'} ) {
       my $rows = $self->do_sql( 'UPDATE_SESSION', %options );
       &log_message( undef,
-                    "Updated expiry date for session ["
-                    . $options{session}
-                    . "]: rows = [$rows]"
-                  ) if $options{verbose};
-    }
-  }
+            "Updated expiry date for session ["
+          . $options{session}
+          . "]: rows = [$rows]" )
+        if $options{verbose};
+    } ## end if ( $options{'expires'...})
+  } ## end if ( $options{new} )
   else {
     my $rows = $self->do_sql( 'STORE_SESSION_UPDATE', %options );
     &log_message( undef,
-                  'Updated session ['
-                  . $options{session}
-                  . "] with\n"
-                  . $self->{'sql'}->{STORE_SESSION_UPDATE}->{sql}
-                  . "\nBind values are ("
-                  . @options{qw{expires prefs firstname lastname email session}}
-                  . "]"
-                ) if $options{verbose};
-  }
-}
+          'Updated session ['
+        . $options{session}
+        . "] with\n"
+        . $self->{'sql'}->{STORE_SESSION_UPDATE}->{sql}
+        . "\nBind values are ("
+        . @options{qw{expires prefs firstname lastname email session}}
+        . "]" )
+      if $options{verbose};
+  } ## end else [ if ( $options{new} ) ]
+} ## end sub STORE_SESSION
 
 # +---------------------------------------------------------------+
 # | ->REGISTER( %options )                                        |
@@ -463,7 +464,7 @@ sub REGISTER {
   }
 
   return $self->do_sql( 'REGISTER', %options );
-}
+} ## end sub REGISTER
 
 # +---------------------------------------------------------------+
 # | ->REMOVE_USER( %options )                                     |
@@ -479,12 +480,12 @@ sub REMOVE_USER {
   my $self    = shift;
   my %options = @_;
 
-  unless ( $self->do_select( 'LOOKUP_USER', %options ) ) {
+  if ( !$self->do_select( 'LOOKUP_USER', %options ) ) {
     die "username does not exist\n";
   }
 
   return $self->do_sql( 'REMOVE_USER', %options );
-}
+} ## end sub REMOVE_USER
 
 # +---------------------------------------------------------------+
 # | ->UPDATE_LOGIN_PASSWORD( %options )                           |
@@ -509,13 +510,14 @@ sub UPDATE_LOGIN_PASSWORD {
   my $rows = $self->do_sql( 'UPDATE_LOGIN_PASSWORD', %options );
 
   die "Cannot change password for `"
-  . $options{username}
-  . "': could not authenticate user.\n"
-  . "session: " . $options{session} 
-  . "username: " . $options{username}
-  . "password: " . $options{password}->[0]
-  unless $rows == 1;
-}
+    . $options{username}
+    . "': could not authenticate user.\n"
+    . "session: "
+    . $options{session}
+    . "username: "
+    . $options{username}
+    if $rows == 1;
+} ## end sub UPDATE_LOGIN_PASSWORD
 
 # +---------------------------------------------------------------+
 # | ->LOGOUT( %options )                                          |
@@ -543,7 +545,7 @@ sub LOGOUT {
   else {
     $self->do_sql( 'LOGOUT_ANON', %options );
   }
-}
+} ## end sub LOGOUT
 
 # +---------------------------------------------------------------+
 # | ->LOGIN( %options )                                           |
@@ -563,12 +565,12 @@ sub LOGIN {
   my $aref = $self->do_select( 'LOGIN', %options );
 
   die "Unable to login `"
-  . $options{username}
-  . "': invalid username/password.\n"
-  unless defined($aref);
+    . $options{username}
+    . "': invalid username/password.\n"
+    if !defined($aref);
 
   return $aref;
 
-}
+} ## end sub LOGIN
 
 1;
