@@ -29,14 +29,14 @@ BEGIN {
   use vars qw($VERSION @ISA);
 }
 
-use Carp;
 use Digest::MD5;
-use POSIX qw(strftime);
+use English;
 use File::Basename;
 use File::Copy;
 use File::Path;
 use File::Temp qw/tempfile/;
 use IO::Handle;
+use POSIX qw(strftime);
 
 use TagX::Log;
 use Bedrock::XML;
@@ -795,9 +795,8 @@ sub register {
                               email     => $email
                             );
 
-  &log_message(
-    undef,
-"Registering user ($username, $password, $firstname, $lastname, $email): rows = [$rows]"
+  &log_message( undef,
+    "Registering user ($username, $firstname, $lastname, $email): rows = [$rows]"
   ) if $verbose;
 }
 
@@ -832,7 +831,7 @@ sub login {
 
   my ($verbose, $ctx, $config) = @{$self}{qw(verbose ctx config)};
 
-  &log_message( undef, "Attempting to log in user ($username, $password)" )
+  &log_message( undef, "Attempting to log in user [$username]" )
     if $verbose;
 
   my $aref = $self->LOGIN( username => $username,
@@ -907,16 +906,16 @@ sub change_passwd {
   my ( $verbose, $ctx, $config ) = @{$self}{qw(verbose ctx config)};
   my $t = $config->{'table_name'};
 
-  &log_message(
-    undef,
-"Attempting to change password to `$npasswd' from `$opasswd' for `$username'"
+  &log_message( undef,
+    "Attempting to change password to `$npasswd' from `$opasswd' for `$username'"
   ) if $verbose;
 
-  $self->UPDATE_LOGIN_PASSWORD( table    => $config->{table_name},
-                                username => $username,
-                                password => [ $npasswd, $opasswd ],
-				session  => $self->{session}
-                              );
+  $self->UPDATE_LOGIN_PASSWORD(
+    table    => $config->{table_name},
+    username => $username,
+    password => [ $npasswd, $opasswd ],
+    session  => $self->{session}
+  );
 }
 
 sub remember_user {
@@ -1085,9 +1084,7 @@ provides the root for the session directory.
 =cut
 
 sub create_session_dir {
-  my $obj     = shift;
-  my $sub_dir = shift;
-
+  my ($obj, $sub_dir) = @_;
   my $self = tied( %{$obj} );
 
   my $session_id = $self->{'session'};
@@ -1096,21 +1093,26 @@ sub create_session_dir {
   my $session_dir = $ctx->{'CONFIG'}->{'SESSION_DIR'};
 
   die "No SESSION_DIR defined.\n"
-  unless $session_dir;
+    if  ! $session_dir;
 
   $session_dir .= "/$session_id";
 
-  unless ( -d "$session_dir/$sub_dir" ) {
+  if (! -d "$session_dir/$sub_dir" ) {
     &log_message(undef, "creating directory $session_dir/$sub_dir")
       if $verbose;
 
     eval { mkpath("$session_dir/$sub_dir"); };
-
-    if ( $@ ) {
-      &log_message(undef, "Unable to create $session_dir/$sub_dir\n$@\n");
+    my $err = $@;
+    
+    if ( $err ) {
+      &log_message(undef, "Unable to create $session_dir/$sub_dir\n$err\n\n$OS_ERROR");
       die "Unable to create $session_dir/$sub_dir\n";
     }
 
+  }
+  else {
+    &log_message(undef, "session directory already exists")
+      if $verbose;
   }
 
   return "$session_dir/$sub_dir";
