@@ -1,3 +1,10 @@
+Wed Jan  5 17:05:37 2022  Rob Lauer  <rlauer6@comcast.net>
+
+	[remove passwords from logs]:
+	* src/main/perl/lib/BLM/Startup/SQLSession.pm.in
+	- remove password from log messages
+	* src/main/perl/lib/BLM/Startup/SessionManager.pm.in: likewise
+
 Wed Jan  5 17:00:02 2022  Rob Lauer  <rlauer6@comcast.net>
 
 	[docker]:
